# path_tracer

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
assets/: cornell.glb  double_torus.glb  emission_test.glb  simple.glb
pkg/: README.md  package.json  path_tracer.d.ts  path_tracer.js  path_tracer_bg.wasm  path_tracer_bg.wasm.d.ts
src/: lib.rs  main.rs
src/render/: mod.rs  scene.rs  shader.wgsl  state.rs
src/utils/: mod.rs  unwrap_universal.rs
