[package]
name = "path_tracer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "28.0.0"
winit = "0.30.12"
log = "0.4.29"
gltf = { version = "1.4.1", features = [
    "KHR_materials_specular",
    "KHR_materials_emissive_strength",
] }
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.0", features = ["bytemuck"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.114"
wasm-bindgen-futures = "0.4.64"
web-sys = { version = "0.3.91", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    "GpuCanvasContext",
    "Response",
] }
js-sys = "0.3.91"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.9"
pollster = "0.4.0"
