[package]
name = "path_tracer"
version = "0.1.0"
edition = "2024"
description = "Demo Rust wgpu interactive path tracer."
repository = "https://github.com/0dpe/path_tracer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "29.0.1"
winit = "0.30.13"
log = "0.4.29"
gltf = { version = "1.4.1", features = [
    "KHR_materials_specular",
    "KHR_materials_emissive_strength",
] }
bytemuck = { version = "1.25.0", features = ["derive"] }
glam = { version = "0.32.1", features = ["bytemuck"] }
web-time = "1.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["Response"] }
js-sys = "0.3.95"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
pollster = "0.4.0"
